# orm_playground

./: README.md  pyproject.toml  requirements.txt
apps/model_inheritance/: apps.py  models.py
apps/model_inheritance/migrations/: 0001_initial.py
apps/students/: models.py  urls.py  views.py
apps/students/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/students/: student_list.html
